switch to feature launcher